trunk/Archive2/03/2fd68211c4d1e7/output
kill: Operation not permitted
kill: Operation not permitted
kill: Operation not permitted
main.cpp:2:22: error: template declaration of ‘TIterator EncodeOne’
 TIterator EncodeOne( codepoint codepoint, TIterator iterator  ) const {
                      ^
main.cpp:2:22: error: ‘codepoint’ was not declared in this scope
main.cpp:2:53: error: expected primary-expression before ‘iterator’
 TIterator EncodeOne( codepoint codepoint, TIterator iterator  ) const {
                                                     ^
main.cpp:8:22: error: template declaration of ‘TIterator EncodeOne’
 TIterator EncodeOne( codepoint codepoint, TIterator iterator, std::false_type is1 ) const {
                      ^
main.cpp:8:22: error: ‘codepoint’ was not declared in this scope
main.cpp:8:53: error: expected primary-expression before ‘iterator’
 TIterator EncodeOne( codepoint codepoint, TIterator iterator, std::false_type is1 ) const {
                                                     ^
main.cpp:8:63: error: ‘false_type’ is not a member of ‘std’
 TIterator EncodeOne( codepoint codepoint, TIterator iterator, std::false_type is1 ) const {
                                                               ^
main.cpp:13:22: error: template declaration of ‘TIterator EncodeOne’
 TIterator EncodeOne( codepoint codepoint, TIterator iterator, std::true_type is1 ) const {
                      ^
main.cpp:13:22: error: ‘codepoint’ was not declared in this scope
main.cpp:13:53: error: expected primary-expression before ‘iterator’
 TIterator EncodeOne( codepoint codepoint, TIterator iterator, std::true_type is1 ) const {
                                                     ^
main.cpp:13:63: error: ‘true_type’ is not a member of ‘std’
 TIterator EncodeOne( codepoint codepoint, TIterator iterator, std::true_type is1 ) const {
                                                               ^
